responsive layout bug fixed

--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,46 +1,53 @@
 .main-container {
-    margin: 20px 15%;
-    display: grid;
-    grid-template: 
-        "search search" auto
-        "popular popular" auto
-        "latest genres" auto
-        "footer footer" auto
-        / 2fr 1fr;
+  margin: 20px 15%;
+  display: grid;
+  grid-template:
+    "search search" auto
+    "popular popular" auto
+    "latest genres" auto
+    "footer footer" auto
+    / 2fr 1fr;
 }
 
 .searchbar-container-item {
-    grid-area: search;
-    margin: 0 15%;
-    margin-bottom: 15px;
+  grid-area: search;
+  margin: 0 15%;
+  margin-bottom: 15px;
 }
 
 .popular-manga-container-item {
-    grid-area: popular;
+  grid-area: popular;
 }
 
 .latest-manga-container-item {
-    grid-area: latest;
-    height: auto;
+  grid-area: latest;
+  height: auto;
 }
 
 .genres-manga-container-item {
-    grid-area: genres;
+  grid-area: genres;
 }
 
 .footer-container-item {
-    grid-area: footer;
+  grid-area: footer;
 }
 
 @media screen and (max-width: 1024px) {
-    .popular-manga-container-item { display: none; }
-    .tags-manga-container-item { display: none; }
-    .main-container {
-        margin: 20px 0;
-        grid-template: 
-        "latest" auto
-        "genres" auto
-        "footer" auto
-        / 100%;
-    }
+  .popular-manga-container-item {
+    display: none;
+  }
+  .genres-manga-container-item {
+    display: none;
+  }
+  .searchbar-container-item {
+    display: none;
+  }
+  .main-container {
+    margin: 20px 0;
+    grid-template:
+      "latest" auto
+      "genres" auto
+      "footer" auto
+      / 100%;
+  }
 }
